Below you can find what changed in each version. Version number convention is based basically on changes made to database structure. In case when we made some changes in 
database structure we're incrementing number after first decimal (i.e 1.1, 1.2). Otherwise we're incrementing the number after second decimal (i.e 1.2.1, 1.2.2)

Version 1.4
- Added possibility to set Confirmation page summary text
- Added Cancel button on Edit page
- Top and bottom controlbars set as default in eZ
- Added "Save and exit" button on edit page
- Fixed JS bug on List page when no forms were added
- Fixed redirection when F5 hit on receipt page

Version 1.3.2
- Fixed sending of empty email by hitting F5 on receipt page
- Updated English translation file and also translations in whole extension
- Fixed height of form-field-attribute elements (in admin GUI)
- Added edit form JS validation (page separator cannot be the first nor the last element of the form)

Version 1.3.1
- Fixed bug with mandatory radio buttons and checkboxes

Version 1.3
- Fixed box width in admin panel
- Added form "Author"
- Added gradient backgrounds of the input types boxes in admin panel
- Fixed bug with not mandatory radio buttons
- Each field has a description now, which is displayed on a front, on a top of the field box
- Added possibility to set header for confirmation page
- Added possibility to set header for receipt page
- Added form steps, visible on the top of the form. Current step is marked.
- Label for every input type is required
- Added label for the first page
- Added show and hide for the form definition in admin GUI
- Added possibility to set intro and body text which are displayed on receipt page
- Fixed bug with the duplicated labels
- Following elements can be enabled/disabled in formmaker.ini: description, css class and default values
- Added possibility to send only filled in data (excluding checkboxes)

Version 1.2