@@ -1,5 +1,6 @@
 Below you can find what changed in each version. Version number convention is based basically on changes made to database structure. In case when we made some changes in 
-database structure we're incrementing number after first decimal (i.e 1.1, 1.2). Otherwise we're incrementing the number after second decimal (i.e 1.2.1, 1.2.2)
+database structure we're incrementing number after first decimal (i.e 1.1, 1.2). Otherwise we're incrementing the number after second decimal (i.e 1.2.1, 1.2.2).
+Database update scripts can be found under sql/update directory.
 
 Version 1.4
 - Added possibility to set Confirmation page summary text
@@ -8,6 +9,7 @@ Version 1.4
 - Added "Save and exit" button on edit page
 - Fixed JS bug on List page when no forms were added
 - Fixed redirection when F5 hit on receipt page
+- Added database update script
 
 Version 1.3.2
 - Fixed sending of empty email by hitting F5 on receipt page
